frontend/k8s/deployment.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: frontend
  namespace: frontend
spec:
  replicas: 2
  selector:
    matchLabels:
      app: frontend
  template:
    metadata:
      name: frontend
      labels:
        app: frontend
    spec:
      # nodeSelector:
      #   node-pool: satellite
      containers:
        - name: frontend
          image: th1alexandre/frontend:latest
          imagePullPolicy: Always
          ports:
            - containerPort: 3000
              name: http
          resources:
            requests:
              cpu: "100m"
              memory: "64Mi"
            limits:
              cpu: 200m
              memory: "128Mi"
